# vpp-stats-client

./: Cargo.toml  LICENSE-MIT  README.md  bench-c-vs-rust  build.rs  wrapper.h
examples/: dump-all.rs  vpp-get-stats.rs  vpp_prometheus_export.rs
src/: lib.rs
src/macros/: mod.rs
