[package]
name = "vpp-stat-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.137"

[build-dependencies]
bindgen = "*"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
minreq = { version = "2.3.0", features = ["https-rustls", "json-using-serde"] }
clap = { version = "3.0.0", features = ["derive"] }
tiny_http = { version = "0.11" }
lazy_static = "*"
regex = "*"
ascii = "*"

