[package]
name = "vpp-stat-client"
version = "0.1.0"
edition = "2021"

[features]
c-client = []
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.137"
uds = "*"
memmap = "*"
regex = "*"

[build-dependencies]
bindgen = "*"

[dev-dependencies]
criterion = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
minreq = { version = "2.3.0", features = ["https-rustls", "json-using-serde"] }
clap = { version = "3.0.0", features = ["derive"] }
tiny_http = { version = "0.11" }
lazy_static = "*"
regex = "*"
ascii = "*"

[[bench]]
name = "dump_benchmark"
harness = false
